Version: Feb 24 1619 Fixes: - Updated the scanner component css so that the checkboxes are aligned and margined uniformly

--- a/src/app/ui/scanner/scanner.component.css
+++ b/src/app/ui/scanner/scanner.component.css
@@ -34,3 +34,9 @@ table, tr, th, td{
     border-color: rgb(145, 143, 143);
     border-width: 1px;
 }
+
+.checkbox-div{
+    text-align: left;
+    margin-left: 32vw;
+    margin-top: 2vh;
+}
